# python3-course-for-devs

./: .gitignore  README.md  pyproject.toml
src/python3_course_for_devs/: main.py
src/python3_course_for_devs/notebooks/: Identify_type.ipynb  Iterator_generator.ipynb  async.ipynb  basic_syntax.ipynb  bool.ipynb  boolean.ipynb  bytes.ipynb  class.ipynb  comprehension.ipynb  copy.ipynb  data_type_conversion.ipynb  data_types.ipynb  decorator.ipynb  dict.ipynb  enum.ipynb  exception.ipynb  float_calc.ipynb  function.ipynb  imperative.ipynb  intro.ipynb  iterator_generator.ipynb  judgment.ipynb  list.ipynb  loop.ipynb  magic_method.ipynb  memory.ipynb  module.ipynb  moshu.ipynb  none.ipynb  number.ipynb  scope.ipynb  set.ipynb  string.ipynb  threading.ipynb  tuple.ipynb  type_conversion.ipynb  types.ipynb  var.ipynb
src/python3_course_for_ts_devs/notebooks/: 1_string.ipynb  number.ipynb  string.ipynb  types.ipynb  var.ipynb
src/typescript_inspired_python3_learning/notebooks/: 1_string.ipynb
