[project]
name = "python3_course_for_ts_devs"
version = "0.0.1"
description = ""
authors = [
    {name = "songbinghui", email = "soongbinghui@gmail.com"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "jupyterlab>=4.0.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
jump = {shell = "cd ./src/python3_course_for_ts_devs/notebooks"}
up = "jupyter lab"
learn = {composite = ["jump", "up"]}